#   Copyright 2014 Commonwealth Bank of Australia
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.


#@namespace scala au.com.cba.omnia.maestro.benchmark.thrift

struct Struct10 {
  1  : string str1
  2  : string str2
  3  : string str3
  4  : i32    int1
  5  : i64    long1
  6  : string str4
  7  : string str5
  8  : string str6
  9  : i32    int2
  10 : i64    long2
}

struct Struct20 {
  1  : string str1
  2  : string str2
  3  : string str3
  4  : i32    int1
  5  : i64    long1
  6  : string str4
  7  : string str5
  8  : string str6
  9  : i32    int2
  10 : i64    long2
  11 : string str7
  12 : string str8
  13 : string str9
  14 : i32    int3
  15 : i64    long3
  16 : string str10
  17 : string str11
  18 : string str12
  19 : i32    int4
  20 : i64    long4
}

struct Struct30 {
  1  : string str1
  2  : string str2
  3  : string str3
  4  : i32    int1
  5  : i64    long1
  6  : string str4
  7  : string str5
  8  : string str6
  9  : i32    int2
  10 : i64    long2
  11 : string str7
  12 : string str8
  13 : string str9
  14 : i32    int3
  15 : i64    long3
  16 : string str10
  17 : string str11
  18 : string str12
  19 : i32    int4
  20 : i64    long4
  21 : string str13
  22 : string str14
  23 : string str15
  24 : i32    int5
  25 : i64    long5
  26 : string str16
  27 : string str17
  28 : string str18
  29 : i32    int6
  30 : i64    long6
}
